Fix mobile view: center intro logo text and show navigation menu on mobile devices

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3253,7 +3253,7 @@ input, select, textarea {
 
 		#intro h1, #intro h2, #intro h3, #intro h4, #intro h5, #intro h6 {
 			color: #000000;
-			text-align: left;
+			text-align: center;
 		}
 
 		#intro blockquote {
@@ -3716,7 +3716,9 @@ input, select, textarea {
 /* Header */
 
 	#header {
-		color: #000000;
+		color: #ffffff;
+		background-color: #3d2817;
+		background: linear-gradient(135deg, #3d2817 0%, #4a3320 100%);
 		-moz-align-items: center;
 		-webkit-align-items: center;
 		-ms-align-items: center;
@@ -3746,38 +3748,38 @@ input, select, textarea {
 	}
 
 		#header input, #header select, #header textarea {
-			color: #000000;
+			color: #ffffff;
 		}
 
 		#header a {
-			color: #000000;
-			border-bottom-color: rgba(0, 0, 0, 0.4);
+			color: #ffffff;
+			border-bottom-color: rgba(255, 255, 255, 0.4);
 		}
 
 			#header a:hover {
 				border-bottom-color: transparent;
-				color: #6B4A2F !important;
+				color: #E6D7B3 !important;
 			}
 
 		#header strong, #header b {
-			color: #000000;
+			color: #ffffff;
 		}
 
 		#header h1, #header h2, #header h3, #header h4, #header h5, #header h6 {
-			color: #000000;
+			color: #ffffff;
 		}
 
 		#header blockquote {
-			border-left-color: rgba(0, 0, 0, 0.3);
+			border-left-color: rgba(255, 255, 255, 0.3);
 		}
 
 		#header code {
-			background: rgba(0, 0, 0, 0.05);
-			border-color: rgba(0, 0, 0, 0.3);
+			background: rgba(255, 255, 255, 0.1);
+			border-color: rgba(255, 255, 255, 0.3);
 		}
 
 		#header hr {
-			border-bottom-color: rgba(0, 0, 0, 0.3);
+			border-bottom-color: rgba(255, 255, 255, 0.3);
 		}
 
 		#header .logo {
@@ -3800,6 +3802,7 @@ input, select, textarea {
 			text-transform: uppercase;
 			visibility: visible;
 			position: relative;
+			color: #ffffff !important;
 		}
 
 			#header .logo::after {
@@ -3809,15 +3812,8 @@ input, select, textarea {
 				left: 0;
 				width: 100vw;
 				height: 1px;
-				background: #6B4A2F;
-				opacity: 0.5;
-				z-index: 10;
-			}
-
-		@media screen and (max-width: 980px) {
-
-			#header {
-				height: auto !important;
+			background: transparent;
+			opacity: 0;
 				padding-bottom: 0 !important;
 			}
 
@@ -4005,7 +4001,36 @@ input, select, textarea {
 		@media screen and (max-width: 980px) {
 
 			#nav {
-				display: none;
+				display: -moz-flex;
+				display: -webkit-flex;
+				display: -ms-flex;
+				display: flex;
+				width: 100%;
+				max-width: 100%;
+				height: auto;
+				line-height: normal;
+				padding: 1rem 0;
+				flex-direction: column;
+				align-items: center;
+				position: static;
+				margin: 0;
+			}
+
+			#nav ul.links {
+				flex-direction: column;
+				gap: 1rem;
+				align-items: center;
+			}
+
+			#nav ul.links li a {
+				padding: 0.5rem 1rem;
+				font-size: 0.9rem;
+			}
+
+			#nav ul.icons {
+				display: flex;
+				gap: 1rem;
+				margin-top: 1rem;
 			}
 
 		}
